# recommendation-system

./: .gitignore  06_End_to_End_Recommendation_System.docx  README.md  render.yaml
apps/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/: evaluations.py  events.py  experiments.py  health.py  models_api.py  recommendations.py
apps/backend/app/core/: config.py  exceptions.py  logging_config.py
apps/backend/app/db/: database.py  models.py  seed.py
apps/backend/app/ml/: collaborative.py  content_based.py  popularity.py  ranker.py  registry.py
apps/backend/app/schemas/: common.py  evaluations.py  events.py  experiments.py  recommendations.py
apps/backend/app/services/: evaluation_service.py  event_service.py  experiment_service.py  recommendation_service.py  training_service.py
apps/backend/app/tests/: conftest.py  test_events.py  test_recommendations.py
apps/frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/evaluations/: page.tsx
apps/frontend/app/events/: page.tsx
apps/frontend/app/experiments/: page.tsx
apps/frontend/app/recommendations/: page.tsx
apps/frontend/components/: Navbar.tsx
apps/frontend/lib/: api.ts  types.ts
infra/: docker-compose.yml
